# ndrc

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/ndrc/: lagrangean.h
