cmake_minimum_required(VERSION 3.5)
project(ndrc)
file(GLOB_RECURSE SOURCES_MAIN "src/*/*.cpp" "src/*/*.h" "src/main.cpp" )
message("Setting ${CMAKE_BUILD_TYPE} mode ...")
if(CMAKE_BUILD_TYPE STREQUAL R}elease)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -std=c++11")
elseif(CMAKE_BUILD_TYPE STREQUAL Debug)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG} -std=c++11 -D_LOG")
else()
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g3")
endif()

add_executable(ndrc ${SOURCES_MAIN})
target_link_libraries(ndrc)